# Cybersecurity

./: .gitignore  README.md
AES/: aes.cpp  aes.hpp  main.cpp  sbox.py
GF2m/: GF2m.cpp  GF2m.hpp
RSA_Cryptography/: main.cpp  rsa_cryptosys.cpp  rsa_cryptosys.hpp
cpucycles/: main.c
face_detection/: CMakeLists.txt  faceFeature_extr.cpp  main.cpp  test.cpp
sha256/: main.cpp
sslEx/: sslEx.c
xor/: main.cpp
